src/objects/UST_Event_Email__c.object
<CustomObject>
    <description>Object to define email receipts sent out on status changes in event registrations.</description>
    <fields>
        <fullName>Action_Status__c</fullName>
        <description>The status setting of and event registration that you wish to have this email sent.</description>
        <inlineHelpText>The status setting of and event registration that you wish to have this email sent.</inlineHelpText>
        <label>Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>--Inactive--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Sub_status__c</fullName>
        <description>Sub status to use for email trigger. Combines with status if one is selected.</description>
        <inlineHelpText>Sub status to use for email trigger. Combines with status if one is selected.</inlineHelpText>
        <label>Action Sub status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Appointments Confirmed</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Attended - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Checked-in</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Appointments</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_Email__c</fullName>
        <description>Comma separated list of emails to blind carbon copy this email.</description>
        <inlineHelpText>Comma separated list of emails to blind carbon copy this email.</inlineHelpText>
        <label>BCC Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Content_Instructions__c</fullName>
        <defaultValue>&apos;THIS IS TEXT&apos;</defaultValue>
        <description>Hooks of registrant information you can add to the email.</description>
        <inlineHelpText>Hooks of registrant information you can add to the email.</inlineHelpText>
        <label>Email Content Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Content__c</fullName>
        <description>Main content of the email. Can include registration information.</description>
        <inlineHelpText>Main content of the email. Can include registration information.</inlineHelpText>
        <label>Email Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <label>Email From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>The event for which this email is defined</description>
        <inlineHelpText>The event for which this email is defined</inlineHelpText>
        <label>Event</label>
        <referenceTo>UST_Event__c</referenceTo>
        <relationshipLabel>UST Event Emails</relationshipLabel>
        <relationshipName>UST_Event_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Letterhead_HTML__c</fullName>
        <description>The letterhead of the email in which the content will be placed</description>
        <inlineHelpText>The letterhead of the email in which the content will be placed</inlineHelpText>
        <label>Letterhead HTML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letterhead_Id__c</fullName>
        <description>The idea of the selected letterhead from the org</description>
        <inlineHelpText>The idea of the selected letterhead from the org</inlineHelpText>
        <label>Letterhead Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letterhead_Name__c</fullName>
        <description>The name of the selected/assigned letterhead</description>
        <inlineHelpText>The name of the selected/assigned letterhead</inlineHelpText>
        <label>Letterhead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letterhead__c</fullName>
        <description>Choose the letterhead you would like to wrap your email message.</description>
        <inlineHelpText>Choose the letterhead you would like to wrap your email message.</inlineHelpText>
        <label>Letterhead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UG Admissions</fullName>
                </value>
                <value>
                    <fullName>DFC Letterhead</fullName>
                </value>
                <value>
                    <fullName>SOE School of Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Email_Id__c</fullName>
        <description>Id of the organizational email that allows for external sending out of Salesforce</description>
        <inlineHelpText>Id of the organizational email that allows for external sending out of Salesforce</inlineHelpText>
        <label>Org Email Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Email__c</fullName>
        <description>Organizational email to send from</description>
        <inlineHelpText>Organizational email to send from</inlineHelpText>
        <label>Org Email</label>
        <type>Email</type>
    </fields>
    <label>UST Event Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Action_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Email-{0000}</displayFormat>
        <label>UST Event Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>